--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -14,6 +14,11 @@ jobs:
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
+        with:
+          run_install: false
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
 
       - name: Run prettier
         run: pnpm format:ci
