--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "@slidev/types": "^52.0.0",
     "prettier": "3.6.2",
     "prettier-plugin-organize-imports": "^4.1.0",
-    "prettier-plugin-slidev": "^1.0.5"
+    "prettier-plugin-slidev": "^1.0.5",
+    "vue-tsc": "^3.0.1"
   },
   "//": "Learn more: https://sli.dev/guide/write-theme.html",
   "slidev": {
