feat: add favicon.svg asset and ignore fonts directory in .gitignore

--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "defaults": {
       "transition": "fade",
       "fonts": {
-        "sans": "Nunito Sans",
-        "mono": "Fira Code"
+        "sans": "ml, Inter",
+        "mono": "ml"
       }
     }
   },
