feat: add configurable color patterns for theme customization
- Add support for single and rotation color patterns
- Allow users to configure baseColor and colorPattern in theme config
- Create useColor composable for centralized color management
- Split example into rotation and single pattern demos
- Remove unused intro layout
- Update README with configuration documentation

BREAKING CHANGE: Removed intro layout. Use cover or default layout instead.

--- a/.prettierrc
+++ b/.prettierrc
@@ -5,7 +5,12 @@
   "plugins": ["prettier-plugin-organize-imports"],
   "overrides": [
     {
-      "files": ["slides.md", "pages/*.md", "example.md"],
+      "files": [
+        "slides.md",
+        "pages/*.md",
+        "example-rotation.md",
+        "example-single.md"
+      ],
       "options": {
         "parser": "slidev",
         "plugins": ["prettier-plugin-slidev"]
