fix: change default transition from view-transition to fade
The view-transition API is experimental and may cause issues in some browsers.
Using fade transition as a more stable default option.

--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
   "slidev": {
     "colorSchema": "dark",
     "defaults": {
-      "transition": "view-transition",
+      "transition": "fade",
       "fonts": {
         "sans": "Inter"
       }
